try to fix centering on mobile 4

--- a/style.css
+++ b/style.css
@@ -150,11 +150,11 @@ a:hover {
 /* Start Home Content */
 .wrapper {
     display: grid;
-    grid-template-rows: repeat(4,fit-content);
+    grid-template-rows: repeat(auto-fit,minmax(min-content, 100vh));
     grid-auto-columns: 1fr;
     overflow: hidden;
     align-items: center;
-    
+    width: 100vw;
 }
 
 #particles-js {
